# api/swagger.yaml
@@ -243,45 +243,49 @@ paths:
         "404":
           description: "Unexpected error"
       x-swagger-router-controller: "Email"
-  /users/login:
+  /user/login:
     post:
       tags:
         - user
-      summary: Login
-      description: Login with a form
-      consumes:
-        - application/x-www-form-urlencoded
-      produces:
-        - application/json
-      parameters:
-        - name: username
-          in: formData
-          required: true
-          type: string
-        - name: password
-          in: formData
-          required: true
-          type: string
+      description: Login user
+      operationId: userLogin
+
       responses:
-        '200':
-          description: successful login
-        '401':
-          description: unauthorized
-  /users/me:
-    get:
+        200:
+          description: Succesfull login
+        409:
+          description: Username is already taken
+        422:
+          description: Request body is not complete
+        500:
+          description: Internal Server Error
+
+  /user/signup:
+    post:
       tags:
         - user
-      summary: Data of the user of the current session
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: successful login
-          schema:
-            $ref: '#/definitions/User'
-        '401':
-          description: unauthorized
+      description: Register user
+      operationId: userRegister
 
+      responses:
+        200:
+          description: succesfull Registration
+        422:
+          description: Request body is not complete
+        500:
+          description: Internal Server Error
+  /user/logout:
+    post:
+      tags:
+        - user
+      description: Logout user
+      operationId: userLogout
+      responses:
+        200:
+          description: Successfull logout
+
+        500:
+          description: Internal Server Error
 definitions:
   Service:
     type: "object"
@@ -393,21 +397,3 @@ definitions:
     description: "email registered to the newsletter"
     example:
       email: "email"
-  User:
-    title: User
-    description: A user
-    type: object
-    properties:
-      id:
-        type: integer
-      name:
-        type: string
-      address:
-        type: string
-      creditcard:
-        type: string
-    example:
-      id: 1
-      name: Vic
-      address: Via le mani dal naso
-      creditcard: asdfgh
